# qtictactoe

./: .cirrus.yml  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  Makefile  README.md  ide  make.mk  qt.cpp  qtictactoe.pro
client/: Client.cpp  Client.h  Makefile  client.cpp  client.h  client.pro
data/: qtictactoe.desktop
debian/: changelog  control  copyright  qtictactoe.install  rules
docs/: _abstract_board_8cpp.html  _abstract_board_8cpp__incl.map  _abstract_board_8cpp__incl.md5  _abstract_board_8cpp_source.html  _abstract_board_8h.html  _abstract_board_8h__dep__incl.map  _abstract_board_8h__dep__incl.md5  _abstract_board_8h_source.html  _abstract_symbol_8cpp.html  _abstract_symbol_8cpp__incl.map  _abstract_symbol_8cpp__incl.md5  _abstract_symbol_8cpp_source.html  _abstract_symbol_8h.html  _abstract_symbol_8h__dep__incl.map  _abstract_symbol_8h__dep__incl.md5  _abstract_symbol_8h_source.html  _board2v2_8cpp.html  _board2v2_8cpp__incl.map  _board2v2_8cpp__incl.md5  _board2v2_8cpp_source.html  _board2v2_8h.html  _board2v2_8h__dep__incl.map  _board2v2_8h__dep__incl.md5  _board2v2_8h__incl.map  _board2v2_8h__incl.md5  _board2v2_8h_source.html  _board_multi_8cpp.html  _board_multi_8cpp__incl.map  _board_multi_8cpp__incl.md5  _board_multi_8cpp_source.html  _board_multi_8h.html  _board_multi_8h__dep__incl.map  _board_multi_8h__dep__incl.md5  _board_multi_8h__incl.map  _board_multi_8h__incl.md5  _board_multi_8h_source.html  _board_single_8cpp.html  _board_single_8cpp__incl.map  _board_single_8cpp__incl.md5  _board_single_8cpp_source.html  (+226 more)
include/: AbstractBoard.h  (+14 more)
(+105 files in other folders)
